@@ -32,8 +32,16 @@ const WebhookDescriptionInner = styled.div`
 `;
 
 export const WebhookDescription = ( { isWebhookSecretEntered } ) => {
-	const { message, requestStatus, refreshMessage } = useWebhookStateMessage();
-	const isWarningMessage = message?.includes( 'Warning: ' ) || false;
+	const {
+		code,
+		message,
+		requestStatus,
+		refreshMessage,
+	} = useWebhookStateMessage();
+	const isWarningMessage = code === 3 || code === 4;
+	const isSuccessMessage = code === 1;
+	const isSuccessMessageWithSecret =
+		isSuccessMessage && isWebhookSecretEntered;
 	const webhookDescriptionClassesAr = [];
 	if ( isWebhookSecretEntered ) {
 		webhookDescriptionClassesAr.push( 'expanded' );
@@ -49,17 +57,19 @@ export const WebhookDescription = ( { isWebhookSecretEntered } ) => {
 				className={ webhookDescriptionClassesAr.join( ' ' ) }
 			>
 				{ isWarningMessage && <WarningIcon /> }
-				<p>
-					{ message }{ ' ' }
-					<Button
-						disabled={ requestStatus === 'pending' }
-						onClick={ refreshMessage }
-						isBusy={ requestStatus === 'pending' }
-						isLink
-					>
-						{ __( 'Refresh', 'woocommerce-gateway-stripe' ) }
-					</Button>
-				</p>
+				{ ( ! isSuccessMessage || isSuccessMessageWithSecret ) && (
+					<p>
+						{ message }{ ' ' }
+						<Button
+							disabled={ requestStatus === 'pending' }
+							onClick={ refreshMessage }
+							isBusy={ requestStatus === 'pending' }
+							isLink
+						>
+							{ __( 'Refresh', 'woocommerce-gateway-stripe' ) }
+						</Button>
+					</p>
+				) }
 			</WebhookDescriptionInner>
 		</WebhookDescriptionWrapper>
 	);
