@@ -1,7 +1,8 @@
 *** Changelog ***
 
 = 8.6.0 - xxxx-xx-xx =
-* Add - Indicate the activation status of each payment method individually, instead of using a general notice.
+ Tweak - Minor text updates to webhook-related configuration labels and buttons.
+** Add - Indicate the activation status of each payment method individually, instead of using a general notice.
 * Fix - JS error when billing country field does not exist on the payment method page.
 * Fix - Prevent multiple instances of the "Update the Payment Method" checkbox from displaying on the My Account > Payment Methods page when using the legacy checkout experience.
 * Fix - Prevent duplicate customer creation during guest checkout.
